--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,15 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: myapp  # valgfrit, hvis du vil sikre at init script kører på en specifik db
+      POSTGRES_DB: postgres
     volumes:
       - ./db/PostgresData:/var/lib/postgresql/data
-      - ./db/init:/docker-entrypoint-initdb.d  # map init scripts til denne mappe
+      - ./db/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     restart: always
+    networks:
+      - postgres_network  # Tilføj til brugerdefineret netværk
+
+networks:
+  postgres_network:  # Definer netværket
+    driver: bridge
+
